Completed Anthropic API and added preview website