@@ -20,6 +20,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.commons.lang3.tuple.ImmutablePair;
@@ -44,12 +45,12 @@ class CompletionsTest {
 		svcs = TestConfiguration.getCompletionServices().stream() //
 				.filter(p -> p.getLeft() instanceof OpenAiEndpoint) //
 				.map(p -> new ImmutablePair<OpenAiEndpoint, String>((OpenAiEndpoint) p.getLeft(), p.getRight())) //
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	@AfterAll
 	static void tearDown() {
-		TestConfiguration.close(svcs.stream().map(p -> p.getLeft()).toList());
+		TestConfiguration.close(svcs.stream().map(p -> p.getLeft()).collect(Collectors.toList()));
 	}
 
 	static Stream<ImmutablePair<OpenAiEndpoint, String>> services() {
