@@ -22,6 +22,7 @@ import java.io.File;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.commons.lang3.tuple.ImmutablePair;
@@ -52,12 +53,12 @@ class ImagesTest {
 		svcs = TestConfiguration.getImageGenerationServices().stream() //
 				.filter(p -> p.getLeft() instanceof OpenAiEndpoint) //
 				.map(p -> new ImmutablePair<OpenAiEndpoint, String>((OpenAiEndpoint) p.getLeft(), p.getRight())) //
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	@AfterAll
 	static void tearDown() {
-		TestConfiguration.close(svcs.stream().map(p -> p.getLeft()).toList());
+		TestConfiguration.close(svcs.stream().map(p -> p.getLeft()).collect(Collectors.toList()));
 	}
 
 	static Stream<ImmutablePair<OpenAiEndpoint, String>> services() {
